--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,17 @@ table, th, td {
     min-width: 100px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   }
+
+  ul.images {
+    margin: 0;
+    padding: 0;
+    white-space: nowrap;
+    width: 900px;
+    overflow-x: auto;
+    background-color: #ddd;
+  }
+  ul.images li {
+    display: inline;
+    width: 150px;
+    height: 150px;
+  }
