--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,32 @@
-table, th, td {
-    border: thin solid black;
-    border-collapse: collapse;
-    margin: 25px 0;
-    text-align: center;
-    font-family: sans-serif;
-    min-width: 100px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  }
 
-  ul.images {
-    margin: 0;
-    padding: 0;
-    white-space: nowrap;
-    width: 900px;
-    overflow-x: auto;
-    background-color: #ddd;
-  }
-  ul.images li {
-    display: inline;
-    width: 150px;
-    height: 150px;
-  }
+ul.images {
+  margin: 0;
+  padding: 0;
+  white-space: nowrap;
+  width: 900px;
+  overflow-x: auto;
+  background-color: #ddd;
+}
+ul.images li {
+  display: inline;
+  width: 150px;
+  height: 150px;
+}
+body{
+  background-color: grey;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+header{
+  height: 145px;
+  background-color:whitesmoke;
+
+}
+
+header nav ul{
+  text-align: center;
+}
+header nav ul li{
+font-size: 20px;
+  display: inline-block;
+}
